<resources>
    <string name="app_name">ExpenseHW</string>
    <string name="title_activity_expense_add">expense_add</string>
    <string name="EnterHere">Enter Here</string>
    <string name="EXPENSE">EXPENSE</string>
    <string name="Expense">Expense</string>
    <string name="Note">Note</string>
    <string name="CANCEL">CENCEL</string>
    <string name="SAVE">SAVE</string>
    <string name="Zero.ZeroZero">0.00</string>
    <string name="Date">Date</string>
</resources>
