<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="expense.fandi.cs.brandies.edu.expensehw.expense_add">


    <TextView
        android:id="@+id/textView_Expense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/Expense"
        android:textSize="24dp" />

    <EditText
        android:id="@+id/editText_Expense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView_Expense"
        android:layout_marginTop="28dp"
        android:hint="@string/Zero.ZeroZero"
        android:inputType="number|numberDecimal" />

    <TextView
        android:id="@+id/textView_Note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_Expense"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="62dp"
        android:gravity="center"
        android:text="@string/Note"
        android:textSize="24dp" />

    <EditText
        android:id="@+id/editText_Note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:hint="@string/Note"
        android:inputType="text" />

    <Button
        android:id="@+id/button_Save"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_Note"
        android:layout_marginTop="94dp"
        android:layout_toLeftOf="@+id/textView_Expense"
        android:layout_toStartOf="@+id/textView_Expense"
        android:text="@string/SAVE" />

    <Button
        android:id="@+id/botton_Cancen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button_Save"
        android:layout_alignBottom="@+id/button_Save"
        android:layout_toEndOf="@+id/textView_Expense"
        android:layout_toRightOf="@+id/textView_Expense"
        android:text="@string/CANCEL" />


</RelativeLayout>

